--- a/src/styles/var.styl
+++ b/src/styles/var.styl
@@ -8,21 +8,24 @@ $background-default                         = #F3F4F6;
 // color
 
 $brand-color                                = #00BA76;
+$brand-color-yellow                         = #F39900;
 $white                                      = #ffffff;
 
 // font
 
 $font-color                                 = #333333;
 $font-second                                = #B0B0B0;
-$font-size-base                             = 0.046rem;
-$font-size-head                             = 0.05rem;
+$font-size-base                             = 0.042rem;
+$font-size-head                             = 0.048rem;
+$font-size-small                            = 0.036rem;
+
 
 // padding margin
 
 
-$padding-small                              = 0.03rem;
+$padding-small                              = 0.024rem;
 $padding-base                               = 0.04rem;
-$padding-large                              = 0.05rem;
+$padding-large                              = 0.048rem;
 
 $margin-small                               = 0.03rem;
 $margin-base                                = 0.04rem;
