--- a/src/styles/var.styl
+++ b/src/styles/var.styl
@@ -26,6 +26,7 @@ $font-size-small                            = 0.036rem;
 $padding-small                              = 0.024rem;
 $padding-base                               = 0.04rem;
 $padding-large                              = 0.048rem;
+$padding-tag                                = 0.01rem;
 
 $margin-small                               = 0.03rem;
 $margin-base                                = 0.04rem;
@@ -52,6 +53,9 @@ $situation-logo-size                        = 0.25rem;
 
 // banner
 $banner-height                              = 0.46rem;
+
+// Avatar
+$avatar-size-base                           = 0.25rem;
 
 setBackgroundImage(name, position=center) {
   background-image: url(name);
