--- a/src/styles/var.styl
+++ b/src/styles/var.styl
@@ -15,7 +15,7 @@ $white                                      = #ffffff;
 
 $font-color                                 = #333333;
 $font-second                                = #B0B0B0;
-$font-size-base                             = 0.042rem;
+$font-size-base                             = 14px;
 $font-size-head                             = 0.048rem;
 $font-size-small                            = 0.036rem;
 
