--- a/src/styles/var.styl
+++ b/src/styles/var.styl
@@ -16,8 +16,8 @@ $white                                      = #ffffff;
 $font-color                                 = #333333;
 $font-second                                = #B0B0B0;
 $font-size-base                             = 14px;
-$font-size-head                             = 0.048rem;
-$font-size-small                            = 0.036rem;
+$font-size-head                             = 18px;
+$font-size-small                            = 12px;
 
 
 // padding margin
