--- a/src/styles/base.styl
+++ b/src/styles/base.styl
@@ -1,6 +1,22 @@
 @import '~normalize.css'
 @import 'var.styl'
 
+* {
+  outline: none;
+  -webkit-user-select: none;
+  -webkit-tap-highlight-color: rgba(255, 255, 255, 0);
+  border: none;
+  &:active {
+    outline: none;
+  }
+  &:active {
+  
+  }
+  input {
+    -webkit-user-select: initial;
+  }
+}
+
 body {
   position: absolute;
   width: 100%;
@@ -8,6 +24,8 @@ body {
   margin: 0;
   padding: 0;
   background-color: $background-default;
+  font-family: '微软雅黑';
+  box-sizing:border-box;
   #app {
     margin: 0;
     padding: 0;
