--- a/src/styles/var.styl
+++ b/src/styles/var.styl
@@ -4,7 +4,8 @@ $prefix                                     = 'z13';
 
 $background-body                            = #ffffff;
 $background-default                         = #F3F4F6;
-
+$background-mask                            = rgba(0, 0, 0, 0.4);
+$background-mask-dark                       = rgba(0, 0, 0, 0.8);
 // color
 
 $brand-color                                = #00BA76;
@@ -56,6 +57,8 @@ $banner-height                              = 0.46rem;
 
 // Avatar
 $avatar-size-base                           = 0.25rem;
+
+$transition-time                            = 0.2s;
 
 setBackgroundImage(name, position=center) {
   background-image: url(name);
