--- a/src/styles/var.styl
+++ b/src/styles/var.styl
@@ -18,6 +18,8 @@ $font-color                                 = #333333;
 $font-second                                = #B0B0B0;
 $font-size-base                             = 14px;
 $font-size-head                             = 18px;
+$font-size-head-large                       = 26px;
+$font-size-big                              = 0.2rem;
 $font-size-small                            = 12px;
 
 
@@ -35,7 +37,7 @@ $margin-large                               = 0.1rem;
 
 // border
 $border-color                               = #CDCDCD;
-
+$border-color-base                          = #CDCDCD;
 // navbar
 
 $navbar-height                              = 0.1375rem;
