--- a/src/styles/base.styl
+++ b/src/styles/base.styl
@@ -1,6 +1,6 @@
 @import '~normalize.css'
 @import 'var.styl'
-
+@import 'hairline.styl'
 * {
   outline: none;
   -webkit-user-select: none;
@@ -25,10 +25,12 @@ body {
   padding: 0;
   background-color: $background-default;
   font-family: '微软雅黑';
-  box-sizing:border-box;
+  box-sizing: border-box;
   #app {
     margin: 0;
     padding: 0;
     font-size: $font-size-base;
   }
 }
+
+
