--- a/src/styles/base.styl
+++ b/src/styles/base.styl
@@ -23,8 +23,9 @@ body {
   height: 100%;
   margin: 0;
   padding: 0;
+  -webkit-font-smoothing: antialiased;
   background-color: $background-default;
-  font-family: '微软雅黑';
+  font-family: "Roboto", "Helvetica", "Arial", sans-serif,  PingFang SC,Helvetica Neue,Hiragino Sans GB,Helvetica,Microsoft YaHei,Arial;
   box-sizing: border-box;
   #app {
     margin: 0;
