fix bugs and add comments

--- a/src/styles/var.styl
+++ b/src/styles/var.styl
@@ -59,6 +59,7 @@ $banner-height                              = 0.46rem;
 
 // Avatar
 $avatar-size-base                           = 0.25rem;
+$avatar-size-small                          = 0.08rem;
 
 $transition-time                            = 0.2s;
 
