--- a/src/styles/sprite.css
+++ b/src/styles/sprite.css
@@ -82,327 +82,333 @@ To change `display` (e.g. `display: inline-block;`), we suggest using a common C
   width: 23px;
   height: 29px;
 }
-.icon-env-good {
+.icon-arrow-right {
   background-image: url(/static/sprite.png);
   background-position: 0px -244px;
+  width: 17px;
+  height: 30px;
+}
+.icon-env-good {
+  background-image: url(/static/sprite.png);
+  background-position: 0px -274px;
   width: 26px;
   height: 30px;
 }
 .icon-eye {
   background-image: url(/static/sprite.png);
-  background-position: 0px -274px;
-  width: 48px;
-  height: 30px;
-}
-.icon-arrow-right {
-  background-image: url(/static/sprite.png);
   background-position: 0px -304px;
-  width: 17px;
-  height: 30px;
-}
-.icon-img {
-  background-image: url(/static/sprite.png);
-  background-position: 0px -334px;
   width: 48px;
-  height: 34px;
+  height: 30px;
 }
 .icon-verification {
   background-image: url(/static/sprite.png);
-  background-position: 0px -368px;
+  background-position: 0px -334px;
   width: 53px;
   height: 34px;
 }
 .icon-building-icon-active {
   background-image: url(/static/sprite.png);
-  background-position: 0px -402px;
+  background-position: 0px -368px;
   width: 50px;
+  height: 34px;
+}
+.icon-img {
+  background-image: url(/static/sprite.png);
+  background-position: 0px -402px;
+  width: 48px;
+  height: 34px;
+}
+.icon-up-arrow {
+  background-image: url(/static/sprite.png);
+  background-position: 0px -436px;
+  width: 34px;
   height: 34px;
 }
 .icon-my {
   background-image: url(/static/sprite.png);
-  background-position: 0px -436px;
+  background-position: 0px -470px;
   width: 32px;
   height: 35px;
 }
 .icon-my-active {
   background-image: url(/static/sprite.png);
-  background-position: 0px -471px;
+  background-position: 0px -505px;
   width: 32px;
   height: 35px;
 }
-.icon-operation-off {
-  background-image: url(/static/sprite.png);
-  background-position: 0px -506px;
-  width: 62px;
-  height: 36px;
-}
 .icon-service-active {
   background-image: url(/static/sprite.png);
-  background-position: 0px -542px;
-  width: 41px;
-  height: 36px;
-}
-.icon-service {
-  background-image: url(/static/sprite.png);
-  background-position: 0px -578px;
+  background-position: 0px -540px;
   width: 41px;
   height: 36px;
 }
 .icon-building-icon {
   background-image: url(/static/sprite.png);
-  background-position: 0px -614px;
+  background-position: 0px -576px;
   width: 50px;
+  height: 36px;
+}
+.icon-operation-off {
+  background-image: url(/static/sprite.png);
+  background-position: 0px -612px;
+  width: 62px;
   height: 36px;
 }
 .icon-arrow-left {
   background-image: url(/static/sprite.png);
-  background-position: 0px -650px;
+  background-position: 0px -648px;
   width: 20px;
+  height: 36px;
+}
+.icon-service {
+  background-image: url(/static/sprite.png);
+  background-position: 0px -684px;
+  width: 41px;
   height: 36px;
 }
 .icon-home {
   background-image: url(/static/sprite.png);
-  background-position: 0px -686px;
+  background-position: 0px -720px;
   width: 39px;
   height: 39px;
 }
 .icon-comment {
   background-image: url(/static/sprite.png);
-  background-position: 0px -725px;
+  background-position: 0px -759px;
   width: 45px;
   height: 39px;
 }
 .icon-home-active {
   background-image: url(/static/sprite.png);
-  background-position: 0px -764px;
+  background-position: 0px -798px;
   width: 39px;
   height: 39px;
 }
-.icon-activity-active {
+.icon-activity {
   background-image: url(/static/sprite.png);
-  background-position: 0px -803px;
+  background-position: 0px -837px;
   width: 35px;
   height: 40px;
 }
-.icon-activity {
+.icon-activity-active {
   background-image: url(/static/sprite.png);
-  background-position: 0px -843px;
+  background-position: 0px -877px;
   width: 35px;
   height: 40px;
 }
 .icon-lock {
   background-image: url(/static/sprite.png);
-  background-position: 0px -883px;
+  background-position: 0px -917px;
   width: 36px;
   height: 42px;
 }
 .icon-delivery-icon {
   background-image: url(/static/sprite.png);
-  background-position: 0px -925px;
+  background-position: 0px -959px;
   width: 52px;
   height: 45px;
 }
 .icon-delivery-icon-active {
   background-image: url(/static/sprite.png);
-  background-position: 0px -970px;
+  background-position: 0px -1004px;
   width: 52px;
   height: 45px;
 }
 .icon-phone {
   background-image: url(/static/sprite.png);
-  background-position: 0px -1015px;
+  background-position: 0px -1049px;
   width: 32px;
   height: 46px;
 }
 .icon-rent-icon-active {
   background-image: url(/static/sprite.png);
-  background-position: 0px -1061px;
+  background-position: 0px -1095px;
   width: 48px;
   height: 46px;
 }
 .icon-rent-icon {
   background-image: url(/static/sprite.png);
-  background-position: 0px -1107px;
+  background-position: 0px -1141px;
   width: 48px;
   height: 46px;
 }
 .icon-express-icon {
   background-image: url(/static/sprite.png);
-  background-position: 0px -1153px;
+  background-position: 0px -1187px;
   width: 51px;
   height: 47px;
 }
 .icon-operation-pause {
   background-image: url(/static/sprite.png);
-  background-position: 0px -1200px;
+  background-position: 0px -1234px;
   width: 27px;
-  height: 48px;
-}
-.icon-express-icon-active {
-  background-image: url(/static/sprite.png);
-  background-position: 0px -1248px;
-  width: 52px;
   height: 48px;
 }
 .icon-operation-tool-up {
   background-image: url(/static/sprite.png);
-  background-position: 0px -1296px;
+  background-position: 0px -1282px;
   width: 48px;
+  height: 48px;
+}
+.icon-express-icon-active {
+  background-image: url(/static/sprite.png);
+  background-position: 0px -1330px;
+  width: 52px;
   height: 48px;
 }
 .icon-blands-icon-active {
   background-image: url(/static/sprite.png);
-  background-position: 0px -1344px;
+  background-position: 0px -1378px;
   width: 46px;
   height: 52px;
 }
 .icon-blands-icon {
   background-image: url(/static/sprite.png);
-  background-position: 0px -1396px;
+  background-position: 0px -1430px;
   width: 46px;
   height: 52px;
 }
 .icon-visitor-icon {
   background-image: url(/static/sprite.png);
-  background-position: 0px -1448px;
+  background-position: 0px -1482px;
   width: 69px;
   height: 53px;
 }
 .icon-visitor-icon-active {
   background-image: url(/static/sprite.png);
-  background-position: 0px -1501px;
+  background-position: 0px -1535px;
   width: 69px;
   height: 53px;
 }
 .icon-park-icon {
   background-image: url(/static/sprite.png);
-  background-position: 0px -1554px;
+  background-position: 0px -1588px;
   width: 54px;
   height: 54px;
 }
 .icon-park-icon-active {
   background-image: url(/static/sprite.png);
-  background-position: 0px -1608px;
+  background-position: 0px -1642px;
   width: 54px;
   height: 54px;
 }
-.icon-tools-icon-active {
-  background-image: url(/static/sprite.png);
-  background-position: 0px -1662px;
-  width: 56px;
-  height: 57px;
-}
 .icon-tools-icon {
   background-image: url(/static/sprite.png);
-  background-position: 0px -1719px;
+  background-position: 0px -1696px;
   width: 56px;
   height: 57px;
 }
-.icon-warning {
+.icon-tools-icon-active {
   background-image: url(/static/sprite.png);
-  background-position: 0px -1776px;
-  width: 60px;
-  height: 60px;
+  background-position: 0px -1753px;
+  width: 56px;
+  height: 57px;
 }
-.icon-toast-warning {
+.icon-error {
   background-image: url(/static/sprite.png);
-  background-position: 0px -1836px;
-  width: 60px;
-  height: 60px;
-}
-.icon-delete {
-  background-image: url(/static/sprite.png);
-  background-position: 0px -1896px;
-  width: 60px;
-  height: 60px;
-}
-.icon-success {
-  background-image: url(/static/sprite.png);
-  background-position: 0px -1956px;
-  width: 58px;
-  height: 60px;
-}
-.icon-toast-fail {
-  background-image: url(/static/sprite.png);
-  background-position: 0px -2016px;
+  background-position: 0px -1810px;
   width: 60px;
   height: 60px;
 }
 .icon-toast-success {
   background-image: url(/static/sprite.png);
-  background-position: 0px -2076px;
+  background-position: 0px -1870px;
   width: 58px;
   height: 60px;
 }
-.icon-error {
+.icon-warning {
   background-image: url(/static/sprite.png);
-  background-position: 0px -2136px;
+  background-position: 0px -1930px;
+  width: 60px;
+  height: 60px;
+}
+.icon-success {
+  background-image: url(/static/sprite.png);
+  background-position: 0px -1990px;
+  width: 58px;
+  height: 60px;
+}
+.icon-toast-fail {
+  background-image: url(/static/sprite.png);
+  background-position: 0px -2050px;
+  width: 60px;
+  height: 60px;
+}
+.icon-delete {
+  background-image: url(/static/sprite.png);
+  background-position: 0px -2110px;
+  width: 60px;
+  height: 60px;
+}
+.icon-toast-warning {
+  background-image: url(/static/sprite.png);
+  background-position: 0px -2170px;
   width: 60px;
   height: 60px;
 }
 .icon-operation-close {
   background-image: url(/static/sprite.png);
-  background-position: 0px -2196px;
+  background-position: 0px -2230px;
   width: 54px;
   height: 62px;
 }
 .icon-operation-open {
   background-image: url(/static/sprite.png);
-  background-position: 0px -2258px;
+  background-position: 0px -2292px;
   width: 63px;
   height: 67px;
 }
 .icon-call {
   background-image: url(/static/sprite.png);
-  background-position: 0px -2325px;
+  background-position: 0px -2359px;
   width: 70px;
   height: 70px;
 }
 .icon-operation-pause-on {
   background-image: url(/static/sprite.png);
-  background-position: 0px -2395px;
+  background-position: 0px -2429px;
   width: 64px;
   height: 82px;
 }
 .icon-operation-center {
   background-image: url(/static/sprite.png);
-  background-position: 0px -2477px;
+  background-position: 0px -2511px;
   width: 100px;
   height: 100px;
 }
 .icon-no-activity {
   background-image: url(/static/sprite.png);
-  background-position: 0px -2577px;
+  background-position: 0px -2611px;
   width: 185px;
   height: 172px;
 }
 .icon-rent-img {
   background-image: url(/static/sprite.png);
-  background-position: 0px -2749px;
+  background-position: 0px -2783px;
   width: 240px;
   height: 240px;
 }
 .icon-z13-logo {
   background-image: url(/static/sprite.png);
-  background-position: 0px -2989px;
+  background-position: 0px -3023px;
   width: 1280px;
   height: 256px;
 }
 .icon-404 {
   background-image: url(/static/sprite.png);
-  background-position: 0px -3245px;
+  background-position: 0px -3279px;
   width: 305px;
   height: 279px;
 }
 .icon-operation-tool {
   background-image: url(/static/sprite.png);
-  background-position: 0px -3524px;
+  background-position: 0px -3558px;
   width: 396px;
   height: 396px;
 }
 .icon-operation-tool-open {
   background-image: url(/static/sprite.png);
-  background-position: 0px -3920px;
+  background-position: 0px -3954px;
   width: 396px;
   height: 396px;
 }
