--- a/src/styles/sprite.css
+++ b/src/styles/sprite.css
@@ -46,369 +46,387 @@ To change `display` (e.g. `display: inline-block;`), we suggest using a common C
   width: 48px;
   height: 22px;
 }
-.icon-Rectangle 2 {
+.icon-like {
   background-image: url(/static/sprite.png);
   background-position: 0px -85px;
+  width: 28px;
+  height: 23px;
+}
+.icon-unlike {
+  background-image: url(/static/sprite.png);
+  background-position: 0px -108px;
+  width: 28px;
+  height: 23px;
+}
+.icon-comment-icon {
+  background-image: url(/static/sprite.png);
+  background-position: 0px -131px;
+  width: 28px;
+  height: 24px;
+}
+.icon-Rectangle 2 {
+  background-image: url(/static/sprite.png);
+  background-position: 0px -155px;
   width: 7px;
   height: 24px;
 }
 .icon-view-num {
   background-image: url(/static/sprite.png);
-  background-position: 0px -109px;
+  background-position: 0px -179px;
   width: 34px;
   height: 25px;
 }
 .icon-env-bad {
   background-image: url(/static/sprite.png);
-  background-position: 0px -134px;
+  background-position: 0px -204px;
   width: 27px;
   height: 26px;
 }
 .icon-operation-on {
   background-image: url(/static/sprite.png);
-  background-position: 0px -160px;
+  background-position: 0px -230px;
   width: 53px;
   height: 27px;
 }
 .icon-search {
   background-image: url(/static/sprite.png);
-  background-position: 0px -187px;
+  background-position: 0px -257px;
   width: 28px;
   height: 28px;
 }
 .icon-location {
   background-image: url(/static/sprite.png);
-  background-position: 0px -215px;
+  background-position: 0px -285px;
   width: 23px;
   height: 29px;
 }
-.icon-arrow-right {
-  background-image: url(/static/sprite.png);
-  background-position: 0px -244px;
-  width: 17px;
-  height: 30px;
-}
 .icon-env-good {
   background-image: url(/static/sprite.png);
-  background-position: 0px -274px;
+  background-position: 0px -314px;
   width: 26px;
   height: 30px;
 }
 .icon-eye {
   background-image: url(/static/sprite.png);
-  background-position: 0px -304px;
+  background-position: 0px -344px;
   width: 48px;
   height: 30px;
 }
-.icon-verification {
+.icon-arrow-right {
   background-image: url(/static/sprite.png);
-  background-position: 0px -334px;
-  width: 53px;
+  background-position: 0px -374px;
+  width: 17px;
+  height: 30px;
+}
+.icon-up-arrow {
+  background-image: url(/static/sprite.png);
+  background-position: 0px -404px;
+  width: 34px;
   height: 34px;
 }
-.icon-building-icon-active {
+.icon-verification {
   background-image: url(/static/sprite.png);
-  background-position: 0px -368px;
-  width: 50px;
+  background-position: 0px -438px;
+  width: 53px;
   height: 34px;
 }
 .icon-img {
   background-image: url(/static/sprite.png);
-  background-position: 0px -402px;
+  background-position: 0px -472px;
   width: 48px;
   height: 34px;
 }
-.icon-up-arrow {
+.icon-building-icon-active {
   background-image: url(/static/sprite.png);
-  background-position: 0px -436px;
-  width: 34px;
+  background-position: 0px -506px;
+  width: 50px;
   height: 34px;
-}
-.icon-my {
-  background-image: url(/static/sprite.png);
-  background-position: 0px -470px;
-  width: 32px;
-  height: 35px;
 }
 .icon-my-active {
   background-image: url(/static/sprite.png);
-  background-position: 0px -505px;
+  background-position: 0px -540px;
   width: 32px;
   height: 35px;
 }
-.icon-service-active {
+.icon-my {
   background-image: url(/static/sprite.png);
-  background-position: 0px -540px;
-  width: 41px;
-  height: 36px;
-}
-.icon-building-icon {
-  background-image: url(/static/sprite.png);
-  background-position: 0px -576px;
-  width: 50px;
-  height: 36px;
+  background-position: 0px -575px;
+  width: 32px;
+  height: 35px;
 }
 .icon-operation-off {
   background-image: url(/static/sprite.png);
-  background-position: 0px -612px;
+  background-position: 0px -610px;
   width: 62px;
-  height: 36px;
-}
-.icon-arrow-left {
-  background-image: url(/static/sprite.png);
-  background-position: 0px -648px;
-  width: 20px;
   height: 36px;
 }
 .icon-service {
   background-image: url(/static/sprite.png);
-  background-position: 0px -684px;
+  background-position: 0px -646px;
+  width: 41px;
+  height: 36px;
+}
+.icon-arrow-left {
+  background-image: url(/static/sprite.png);
+  background-position: 0px -682px;
+  width: 20px;
+  height: 36px;
+}
+.icon-building-icon {
+  background-image: url(/static/sprite.png);
+  background-position: 0px -718px;
+  width: 50px;
+  height: 36px;
+}
+.icon-service-active {
+  background-image: url(/static/sprite.png);
+  background-position: 0px -754px;
   width: 41px;
   height: 36px;
 }
 .icon-home {
   background-image: url(/static/sprite.png);
-  background-position: 0px -720px;
+  background-position: 0px -790px;
   width: 39px;
   height: 39px;
 }
 .icon-comment {
   background-image: url(/static/sprite.png);
-  background-position: 0px -759px;
+  background-position: 0px -829px;
   width: 45px;
   height: 39px;
 }
 .icon-home-active {
   background-image: url(/static/sprite.png);
-  background-position: 0px -798px;
+  background-position: 0px -868px;
   width: 39px;
   height: 39px;
 }
-.icon-activity {
+.icon-activity-active {
   background-image: url(/static/sprite.png);
-  background-position: 0px -837px;
+  background-position: 0px -907px;
   width: 35px;
   height: 40px;
 }
-.icon-activity-active {
+.icon-activity {
   background-image: url(/static/sprite.png);
-  background-position: 0px -877px;
+  background-position: 0px -947px;
   width: 35px;
   height: 40px;
 }
 .icon-lock {
   background-image: url(/static/sprite.png);
-  background-position: 0px -917px;
+  background-position: 0px -987px;
   width: 36px;
   height: 42px;
 }
-.icon-delivery-icon {
+.icon-delivery-icon-active {
   background-image: url(/static/sprite.png);
-  background-position: 0px -959px;
+  background-position: 0px -1029px;
   width: 52px;
   height: 45px;
 }
-.icon-delivery-icon-active {
+.icon-delivery-icon {
   background-image: url(/static/sprite.png);
-  background-position: 0px -1004px;
+  background-position: 0px -1074px;
   width: 52px;
   height: 45px;
+}
+.icon-rent-icon {
+  background-image: url(/static/sprite.png);
+  background-position: 0px -1119px;
+  width: 48px;
+  height: 46px;
 }
 .icon-phone {
   background-image: url(/static/sprite.png);
-  background-position: 0px -1049px;
+  background-position: 0px -1165px;
   width: 32px;
   height: 46px;
 }
 .icon-rent-icon-active {
   background-image: url(/static/sprite.png);
-  background-position: 0px -1095px;
-  width: 48px;
-  height: 46px;
-}
-.icon-rent-icon {
-  background-image: url(/static/sprite.png);
-  background-position: 0px -1141px;
+  background-position: 0px -1211px;
   width: 48px;
   height: 46px;
 }
 .icon-express-icon {
   background-image: url(/static/sprite.png);
-  background-position: 0px -1187px;
+  background-position: 0px -1257px;
   width: 51px;
   height: 47px;
 }
+.icon-express-icon-active {
+  background-image: url(/static/sprite.png);
+  background-position: 0px -1304px;
+  width: 52px;
+  height: 48px;
+}
 .icon-operation-pause {
   background-image: url(/static/sprite.png);
-  background-position: 0px -1234px;
+  background-position: 0px -1352px;
   width: 27px;
   height: 48px;
 }
 .icon-operation-tool-up {
   background-image: url(/static/sprite.png);
-  background-position: 0px -1282px;
+  background-position: 0px -1400px;
   width: 48px;
   height: 48px;
 }
-.icon-express-icon-active {
+.icon-blands-icon {
   background-image: url(/static/sprite.png);
-  background-position: 0px -1330px;
-  width: 52px;
-  height: 48px;
-}
-.icon-blands-icon-active {
-  background-image: url(/static/sprite.png);
-  background-position: 0px -1378px;
+  background-position: 0px -1448px;
   width: 46px;
   height: 52px;
 }
-.icon-blands-icon {
+.icon-blands-icon-active {
   background-image: url(/static/sprite.png);
-  background-position: 0px -1430px;
+  background-position: 0px -1500px;
   width: 46px;
   height: 52px;
 }
 .icon-visitor-icon {
   background-image: url(/static/sprite.png);
-  background-position: 0px -1482px;
+  background-position: 0px -1552px;
   width: 69px;
   height: 53px;
 }
 .icon-visitor-icon-active {
   background-image: url(/static/sprite.png);
-  background-position: 0px -1535px;
+  background-position: 0px -1605px;
   width: 69px;
   height: 53px;
 }
 .icon-park-icon {
   background-image: url(/static/sprite.png);
-  background-position: 0px -1588px;
+  background-position: 0px -1658px;
   width: 54px;
   height: 54px;
 }
 .icon-park-icon-active {
   background-image: url(/static/sprite.png);
-  background-position: 0px -1642px;
+  background-position: 0px -1712px;
   width: 54px;
   height: 54px;
 }
-.icon-tools-icon {
+.icon-tools-icon-active {
   background-image: url(/static/sprite.png);
-  background-position: 0px -1696px;
+  background-position: 0px -1766px;
   width: 56px;
   height: 57px;
 }
-.icon-tools-icon-active {
+.icon-tools-icon {
   background-image: url(/static/sprite.png);
-  background-position: 0px -1753px;
+  background-position: 0px -1823px;
   width: 56px;
   height: 57px;
+}
+.icon-delete {
+  background-image: url(/static/sprite.png);
+  background-position: 0px -1880px;
+  width: 60px;
+  height: 60px;
 }
 .icon-error {
   background-image: url(/static/sprite.png);
-  background-position: 0px -1810px;
+  background-position: 0px -1940px;
+  width: 60px;
+  height: 60px;
+}
+.icon-toast-fail {
+  background-image: url(/static/sprite.png);
+  background-position: 0px -2000px;
   width: 60px;
   height: 60px;
 }
 .icon-toast-success {
   background-image: url(/static/sprite.png);
-  background-position: 0px -1870px;
+  background-position: 0px -2060px;
   width: 58px;
+  height: 60px;
+}
+.icon-toast-warning {
+  background-image: url(/static/sprite.png);
+  background-position: 0px -2120px;
+  width: 60px;
   height: 60px;
 }
 .icon-warning {
   background-image: url(/static/sprite.png);
-  background-position: 0px -1930px;
+  background-position: 0px -2180px;
   width: 60px;
   height: 60px;
 }
 .icon-success {
   background-image: url(/static/sprite.png);
-  background-position: 0px -1990px;
+  background-position: 0px -2240px;
   width: 58px;
-  height: 60px;
-}
-.icon-toast-fail {
-  background-image: url(/static/sprite.png);
-  background-position: 0px -2050px;
-  width: 60px;
-  height: 60px;
-}
-.icon-delete {
-  background-image: url(/static/sprite.png);
-  background-position: 0px -2110px;
-  width: 60px;
-  height: 60px;
-}
-.icon-toast-warning {
-  background-image: url(/static/sprite.png);
-  background-position: 0px -2170px;
-  width: 60px;
   height: 60px;
 }
 .icon-operation-close {
   background-image: url(/static/sprite.png);
-  background-position: 0px -2230px;
+  background-position: 0px -2300px;
   width: 54px;
   height: 62px;
 }
 .icon-operation-open {
   background-image: url(/static/sprite.png);
-  background-position: 0px -2292px;
+  background-position: 0px -2362px;
   width: 63px;
   height: 67px;
 }
 .icon-call {
   background-image: url(/static/sprite.png);
-  background-position: 0px -2359px;
+  background-position: 0px -2429px;
   width: 70px;
   height: 70px;
 }
 .icon-operation-pause-on {
   background-image: url(/static/sprite.png);
-  background-position: 0px -2429px;
+  background-position: 0px -2499px;
   width: 64px;
   height: 82px;
 }
 .icon-operation-center {
   background-image: url(/static/sprite.png);
-  background-position: 0px -2511px;
+  background-position: 0px -2581px;
   width: 100px;
   height: 100px;
 }
 .icon-no-activity {
   background-image: url(/static/sprite.png);
-  background-position: 0px -2611px;
+  background-position: 0px -2681px;
   width: 185px;
   height: 172px;
 }
 .icon-rent-img {
   background-image: url(/static/sprite.png);
-  background-position: 0px -2783px;
+  background-position: 0px -2853px;
   width: 240px;
   height: 240px;
 }
 .icon-z13-logo {
   background-image: url(/static/sprite.png);
-  background-position: 0px -3023px;
+  background-position: 0px -3093px;
   width: 1280px;
   height: 256px;
 }
 .icon-404 {
   background-image: url(/static/sprite.png);
-  background-position: 0px -3279px;
+  background-position: 0px -3349px;
   width: 305px;
   height: 279px;
 }
 .icon-operation-tool {
   background-image: url(/static/sprite.png);
-  background-position: 0px -3558px;
+  background-position: 0px -3628px;
   width: 396px;
   height: 396px;
 }
 .icon-operation-tool-open {
   background-image: url(/static/sprite.png);
-  background-position: 0px -3954px;
+  background-position: 0px -4024px;
   width: 396px;
   height: 396px;
 }
