--- a/src/styles/sprite.css
+++ b/src/styles/sprite.css
@@ -22,7 +22,7 @@ To change `display` (e.g. `display: inline-block;`), we suggest using a common C
   width: 48px;
   height: 6px;
 }
-.icon-水 {
+.icon-water {
   background-image: url(/static/sprite.png);
   background-position: 0px -6px;
   width: 12px;
@@ -52,13 +52,13 @@ To change `display` (e.g. `display: inline-block;`), we suggest using a common C
   width: 48px;
   height: 22px;
 }
-.icon-like {
+.icon-unlike {
   background-image: url(/static/sprite.png);
   background-position: 0px -99px;
   width: 28px;
   height: 23px;
 }
-.icon-unlike {
+.icon-like {
   background-image: url(/static/sprite.png);
   background-position: 0px -122px;
   width: 28px;
@@ -106,16 +106,16 @@ To change `display` (e.g. `display: inline-block;`), we suggest using a common C
   width: 23px;
   height: 29px;
 }
-.icon-env-good {
-  background-image: url(/static/sprite.png);
-  background-position: 0px -328px;
-  width: 26px;
-  height: 30px;
-}
 .icon-arrow-right {
   background-image: url(/static/sprite.png);
-  background-position: 0px -358px;
+  background-position: 0px -328px;
   width: 17px;
+  height: 30px;
+}
+.icon-env-good {
+  background-image: url(/static/sprite.png);
+  background-position: 0px -358px;
+  width: 26px;
   height: 30px;
 }
 .icon-eye {
@@ -154,22 +154,22 @@ To change `display` (e.g. `display: inline-block;`), we suggest using a common C
   width: 34px;
   height: 34px;
 }
-.icon-my-active {
+.icon-my {
   background-image: url(/static/sprite.png);
   background-position: 0px -588px;
   width: 32px;
   height: 35px;
 }
-.icon-my {
+.icon-my-active {
   background-image: url(/static/sprite.png);
   background-position: 0px -623px;
   width: 32px;
   height: 35px;
 }
-.icon-Group 3 {
+.icon-service {
   background-image: url(/static/sprite.png);
   background-position: 0px -658px;
-  width: 44px;
+  width: 41px;
   height: 36px;
 }
 .icon-building-icon {
@@ -178,10 +178,10 @@ To change `display` (e.g. `display: inline-block;`), we suggest using a common C
   width: 50px;
   height: 36px;
 }
-.icon-arrow-left {
+.icon-operation-off {
   background-image: url(/static/sprite.png);
   background-position: 0px -730px;
-  width: 20px;
+  width: 62px;
   height: 36px;
 }
 .icon-service-active {
@@ -190,339 +190,339 @@ To change `display` (e.g. `display: inline-block;`), we suggest using a common C
   width: 41px;
   height: 36px;
 }
-.icon-service {
+.icon-arrow-left {
   background-image: url(/static/sprite.png);
   background-position: 0px -802px;
-  width: 41px;
+  width: 20px;
   height: 36px;
 }
-.icon-operation-off {
+.icon-comment {
   background-image: url(/static/sprite.png);
   background-position: 0px -838px;
-  width: 62px;
-  height: 36px;
-}
-.icon-home {
-  background-image: url(/static/sprite.png);
-  background-position: 0px -874px;
-  width: 39px;
+  width: 45px;
   height: 39px;
 }
 .icon-home-active {
   background-image: url(/static/sprite.png);
-  background-position: 0px -913px;
+  background-position: 0px -877px;
   width: 39px;
   height: 39px;
 }
-.icon-comment {
+.icon-home {
   background-image: url(/static/sprite.png);
-  background-position: 0px -952px;
-  width: 45px;
+  background-position: 0px -916px;
+  width: 39px;
   height: 39px;
 }
 .icon-activity-active {
   background-image: url(/static/sprite.png);
-  background-position: 0px -991px;
+  background-position: 0px -955px;
   width: 35px;
   height: 40px;
 }
 .icon-activity {
   background-image: url(/static/sprite.png);
-  background-position: 0px -1031px;
+  background-position: 0px -995px;
   width: 35px;
   height: 40px;
 }
 .icon-lock {
   background-image: url(/static/sprite.png);
-  background-position: 0px -1071px;
+  background-position: 0px -1035px;
   width: 36px;
   height: 42px;
 }
-.icon-service-delivery-active {
+.icon-service-delivery {
   background-image: url(/static/sprite.png);
-  background-position: 0px -1113px;
+  background-position: 0px -1077px;
   width: 52px;
   height: 45px;
 }
-.icon-delivery-icon {
+.icon-service-delivery-active {
   background-image: url(/static/sprite.png);
-  background-position: 0px -1158px;
+  background-position: 0px -1122px;
   width: 52px;
   height: 45px;
 }
 .icon-delivery-icon-active {
   background-image: url(/static/sprite.png);
-  background-position: 0px -1203px;
+  background-position: 0px -1167px;
   width: 52px;
   height: 45px;
 }
-.icon-service-delivery {
+.icon-delivery-icon {
   background-image: url(/static/sprite.png);
-  background-position: 0px -1248px;
+  background-position: 0px -1212px;
   width: 52px;
   height: 45px;
 }
-.icon-rent-icon {
+.icon-rent-icon-active {
   background-image: url(/static/sprite.png);
-  background-position: 0px -1293px;
-  width: 48px;
-  height: 46px;
-}
-.icon-service-rent {
-  background-image: url(/static/sprite.png);
-  background-position: 0px -1339px;
+  background-position: 0px -1257px;
   width: 48px;
   height: 46px;
 }
 .icon-phone {
   background-image: url(/static/sprite.png);
-  background-position: 0px -1385px;
+  background-position: 0px -1303px;
   width: 32px;
   height: 46px;
 }
-.icon-rent-icon-active {
+.icon-rent-icon {
   background-image: url(/static/sprite.png);
-  background-position: 0px -1431px;
+  background-position: 0px -1349px;
   width: 48px;
   height: 46px;
 }
-.icon-service-express-active {
+.icon-service-rent {
   background-image: url(/static/sprite.png);
-  background-position: 0px -1477px;
+  background-position: 0px -1395px;
+  width: 48px;
+  height: 46px;
+}
+.icon-express-icon {
+  background-image: url(/static/sprite.png);
+  background-position: 0px -1441px;
   width: 51px;
   height: 47px;
 }
 .icon-service-express {
   background-image: url(/static/sprite.png);
-  background-position: 0px -1524px;
+  background-position: 0px -1488px;
   width: 51px;
   height: 47px;
 }
-.icon-express-icon {
+.icon-service-express-active {
   background-image: url(/static/sprite.png);
-  background-position: 0px -1571px;
+  background-position: 0px -1535px;
   width: 51px;
   height: 47px;
+}
+.icon-operation-tool-up {
+  background-image: url(/static/sprite.png);
+  background-position: 0px -1582px;
+  width: 48px;
+  height: 48px;
 }
 .icon-operation-pause {
   background-image: url(/static/sprite.png);
-  background-position: 0px -1618px;
+  background-position: 0px -1630px;
   width: 27px;
   height: 48px;
 }
 .icon-express-icon-active {
   background-image: url(/static/sprite.png);
-  background-position: 0px -1666px;
+  background-position: 0px -1678px;
   width: 52px;
-  height: 48px;
-}
-.icon-operation-tool-up {
-  background-image: url(/static/sprite.png);
-  background-position: 0px -1714px;
-  width: 48px;
   height: 48px;
 }
 .icon-bland-icon {
   background-image: url(/static/sprite.png);
-  background-position: 0px -1762px;
-  width: 46px;
-  height: 52px;
-}
-.icon-blands-icon {
-  background-image: url(/static/sprite.png);
-  background-position: 0px -1814px;
-  width: 46px;
-  height: 52px;
-}
-.icon-bland-icon-active {
-  background-image: url(/static/sprite.png);
-  background-position: 0px -1866px;
+  background-position: 0px -1726px;
   width: 46px;
   height: 52px;
 }
 .icon-blands-icon-active {
   background-image: url(/static/sprite.png);
-  background-position: 0px -1918px;
+  background-position: 0px -1778px;
   width: 46px;
   height: 52px;
 }
-.icon-service-wash-car {
+.icon-blands-icon {
   background-image: url(/static/sprite.png);
-  background-position: 0px -1970px;
-  width: 44px;
-  height: 53px;
+  background-position: 0px -1830px;
+  width: 46px;
+  height: 52px;
+}
+.icon-bland-icon-active {
+  background-image: url(/static/sprite.png);
+  background-position: 0px -1882px;
+  width: 46px;
+  height: 52px;
 }
 .icon-visitor-icon {
   background-image: url(/static/sprite.png);
-  background-position: 0px -2023px;
+  background-position: 0px -1934px;
+  width: 69px;
+  height: 53px;
+}
+.icon-service-wash-car {
+  background-image: url(/static/sprite.png);
+  background-position: 0px -1987px;
+  width: 44px;
+  height: 53px;
+}
+.icon-service-visitor {
+  background-image: url(/static/sprite.png);
+  background-position: 0px -2040px;
   width: 69px;
   height: 53px;
 }
 .icon-visitor-icon-active {
   background-image: url(/static/sprite.png);
-  background-position: 0px -2076px;
+  background-position: 0px -2093px;
   width: 69px;
   height: 53px;
 }
 .icon-service-clean {
   background-image: url(/static/sprite.png);
-  background-position: 0px -2129px;
+  background-position: 0px -2146px;
   width: 50px;
-  height: 53px;
-}
-.icon-service-visitor {
-  background-image: url(/static/sprite.png);
-  background-position: 0px -2182px;
-  width: 69px;
   height: 53px;
 }
 .icon-service-park {
   background-image: url(/static/sprite.png);
-  background-position: 0px -2235px;
-  width: 54px;
-  height: 54px;
-}
-.icon-park-icon-active {
-  background-image: url(/static/sprite.png);
-  background-position: 0px -2289px;
+  background-position: 0px -2199px;
   width: 54px;
   height: 54px;
 }
 .icon-park-icon {
   background-image: url(/static/sprite.png);
-  background-position: 0px -2343px;
+  background-position: 0px -2253px;
+  width: 54px;
+  height: 54px;
+}
+.icon-park-icon-active {
+  background-image: url(/static/sprite.png);
+  background-position: 0px -2307px;
   width: 54px;
   height: 54px;
 }
 .icon-service-water {
   background-image: url(/static/sprite.png);
-  background-position: 0px -2397px;
+  background-position: 0px -2361px;
   width: 40px;
   height: 56px;
 }
 .icon-operation {
   background-image: url(/static/sprite.png);
-  background-position: 0px -2453px;
-  width: 56px;
-  height: 57px;
-}
-.icon-tools-icon {
-  background-image: url(/static/sprite.png);
-  background-position: 0px -2510px;
+  background-position: 0px -2417px;
   width: 56px;
   height: 57px;
 }
 .icon-operation-active {
   background-image: url(/static/sprite.png);
-  background-position: 0px -2567px;
+  background-position: 0px -2474px;
   width: 56px;
   height: 57px;
 }
 .icon-tools-icon-active {
   background-image: url(/static/sprite.png);
-  background-position: 0px -2624px;
+  background-position: 0px -2531px;
   width: 56px;
   height: 57px;
 }
-.icon-delete {
+.icon-tools-icon {
   background-image: url(/static/sprite.png);
-  background-position: 0px -2681px;
-  width: 60px;
+  background-position: 0px -2588px;
+  width: 56px;
+  height: 57px;
+}
+.icon-success {
+  background-image: url(/static/sprite.png);
+  background-position: 0px -2645px;
+  width: 58px;
   height: 60px;
 }
 .icon-toast-fail {
   background-image: url(/static/sprite.png);
-  background-position: 0px -2741px;
+  background-position: 0px -2705px;
   width: 60px;
   height: 60px;
 }
 .icon-toast-success {
   background-image: url(/static/sprite.png);
-  background-position: 0px -2801px;
+  background-position: 0px -2765px;
   width: 58px;
   height: 60px;
 }
 .icon-toast-warning {
   background-image: url(/static/sprite.png);
-  background-position: 0px -2861px;
+  background-position: 0px -2825px;
   width: 60px;
   height: 60px;
 }
 .icon-error {
   background-image: url(/static/sprite.png);
-  background-position: 0px -2921px;
+  background-position: 0px -2885px;
+  width: 60px;
+  height: 60px;
+}
+.icon-delete {
+  background-image: url(/static/sprite.png);
+  background-position: 0px -2945px;
   width: 60px;
   height: 60px;
 }
 .icon-warning {
   background-image: url(/static/sprite.png);
-  background-position: 0px -2981px;
+  background-position: 0px -3005px;
   width: 60px;
-  height: 60px;
-}
-.icon-success {
-  background-image: url(/static/sprite.png);
-  background-position: 0px -3041px;
-  width: 58px;
   height: 60px;
 }
 .icon-operation-close {
   background-image: url(/static/sprite.png);
-  background-position: 0px -3101px;
+  background-position: 0px -3065px;
   width: 54px;
   height: 62px;
 }
 .icon-operation-open {
   background-image: url(/static/sprite.png);
-  background-position: 0px -3163px;
+  background-position: 0px -3127px;
   width: 63px;
   height: 67px;
 }
 .icon-call {
   background-image: url(/static/sprite.png);
-  background-position: 0px -3230px;
+  background-position: 0px -3194px;
   width: 70px;
   height: 70px;
 }
 .icon-operation-pause-on {
   background-image: url(/static/sprite.png);
-  background-position: 0px -3300px;
+  background-position: 0px -3264px;
   width: 64px;
   height: 82px;
 }
 .icon-operation-center {
   background-image: url(/static/sprite.png);
-  background-position: 0px -3382px;
+  background-position: 0px -3346px;
   width: 100px;
   height: 100px;
 }
 .icon-no-activity {
   background-image: url(/static/sprite.png);
-  background-position: 0px -3482px;
+  background-position: 0px -3446px;
   width: 185px;
   height: 172px;
 }
+.icon-rent-img {
+  background-image: url(/static/sprite.png);
+  background-position: 0px -3618px;
+  width: 240px;
+  height: 240px;
+}
 .icon-z13-logo {
   background-image: url(/static/sprite.png);
-  background-position: 0px -3654px;
+  background-position: 0px -3858px;
   width: 1280px;
   height: 256px;
 }
 .icon-404 {
   background-image: url(/static/sprite.png);
-  background-position: 0px -3910px;
+  background-position: 0px -4114px;
   width: 305px;
   height: 279px;
 }
 .icon-operation-tool {
   background-image: url(/static/sprite.png);
-  background-position: 0px -4189px;
+  background-position: 0px -4393px;
   width: 396px;
   height: 396px;
 }
 .icon-operation-tool-open {
   background-image: url(/static/sprite.png);
-  background-position: 0px -4585px;
+  background-position: 0px -4789px;
   width: 396px;
   height: 396px;
 }
